# MixPilot

./: .env.example  .gitignore  .pre-commit-config.yaml  AGENTS.md  ARCHITECTURE.md  CHANGELOG.md  README.md  pyproject.toml
.claude/: harness.json  settings.json
.claude/agents/: domain-expert.md
.claude/commands/: run-eval.md
.github/workflows/: ci.yml
config/: channels.yaml
config/presets/: performance.yaml  rehearsal.yaml  worship.yaml
docs/: hardware-dependent.md  operator-guide.md
docs/adr/: 0001-dsp-helper-libraries.md  0002-dashboard-realtime-push.md  0003-metric-storage.md  0004-audio-input-m32-usb.md  0005-control-output-x32-osc.md  0006-reaper-scope.md  0007-frontend-stack.md  0008-auto-response-safety-policy.md  0009-lra-implementation.md  0010-metric-timeseries-persistence.md
evals/: README.md
evals/cases/: dynamic-range-baseline.yaml  feedback-baseline.yaml  lra-baseline.yaml  lra-conformance.yaml  lufs-baseline.yaml  lufs-conformance.yaml  peak-baseline.yaml  phase-baseline.yaml  rms-baseline.yaml
evals/fixtures/: README.md  generate_test_wavs.py
evals/service-cases/: README.md  synthetic-multich-baseline.yaml
frontend/: .gitignore  AGENTS.md  index.html  package-lock.json  package.json  tsconfig.json  vite.config.ts
frontend/src/: App.svelte  Meters.svelte  Timeseries.svelte  app.css  main.ts  vite-env.d.ts
frontend/src/lib/: api-types.ts  api.ts
src/mixpilot/: __init__.py  config.py  main.py
src/mixpilot/api/: __init__.py  schemas.py
src/mixpilot/domain/: __init__.py  models.py  ports.py
src/mixpilot/dsp/: __init__.py  (+8 more)
tests/integration/: test_main.py  test_synthetic_end_to_end.py
tests/unit/: test_config.py  test_domain_models.py  test_dsp_dynamic_range.py  test_dsp_feedback.py  test_dsp_lra.py  test_dsp_lufs.py  test_dsp_peak.py  test_dsp_phase.py  test_dsp_rms.py  test_dsp_spectrum.py  test_infra_audio_capture.py  test_infra_audit.py  test_infra_channel_map.py  test_infra_m32_control.py  test_infra_metrics_sink.py  test_infra_synthetic_audio.py  test_infra_wav_replay.py  test_main_audit_path.py  test_main_helpers.py  test_main_meter_broker.py  test_rules_dynamic_range.py  test_rules_feedback.py  test_rules_loudness.py  test_rules_lra.py  test_rules_lufs.py  test_rules_peak.py  test_rules_phase.py  test_runtime_action_history.py  test_runtime_auto_guard.py  test_runtime_buffer.py  test_runtime_feedback_detector.py  test_runtime_live_thresholds.py  test_runtime_persistence_filter.py  test_runtime_rule_toggles.py  test_scripts_bench_dsp.py  test_scripts_export_openapi.py  test_scripts_serve.py
(+32 files in other folders)
